fix: Mobile nav liquid glass, book preview mode (12 pages), SSR loading state
- Add liquid glass effect to mobile nav with backdrop-filter blur
- Add missing --color-* CSS variables for BartoszNavigation
- Change mobile book to preview mode (12 pages instead of 87)
- Add 'Get Full Book' CTA overlay when preview ends
- Add preview badge showing '12 of 87 pages'
- Add loading spinner during SSR hydration (prevents blank page)
- Add top padding to mobile intro for fixed nav
- Update intro text to reflect preview experience

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@auth/prisma-adapter": "^2.11.1",
     "@gsap/react": "^2.1.2",
+    "@prisma/client": "^5.22.0",
     "@react-spring/three": "^10.0.3",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
@@ -23,6 +24,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "@types/three": "^0.181.0",
     "@vercel/blob": "^2.0.0",
+    "bcryptjs": "^3.0.3",
     "elevenlabs": "^1.59.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
@@ -31,6 +33,7 @@
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "playwright": "^1.57.0",
+    "prisma": "^5.22.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-pageflip": "^2.0.3",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
