--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "three": "^0.181.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.2",
