--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc --noEmit",
     "db:seed": "tsx prisma/seed.ts",
     "db:seed:admins": "tsx prisma/seed-admins.ts",
+    "db:seed:admin-enrollments": "tsx prisma/seed-admin-enrollments.ts",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed"
